<resources>
    <string name="app_name">Infamous Performance</string>
    <string-array name="tabs">
        <item>CPU Settings</item>
        <item>CPU Advanced</item>
        <item>Battery</item>
        <item>Memory Settings</item>
        <item>Voltage Settings</item>
        <item>Advanced Settings</item>
        <item>Time In State</item>
        <item>Disk Info</item>
        <item>Tools</item>
        <item>About Infamous</item>
    </string-array>
    <string name="menu_tab">Tabs</string>
    <string name="mt_refresh">Refresh</string>
    <string name="mt_app_settings">"App Settings"</string>
    <string name="mt_reset">Reset</string>
    <string name="mt_restore">Restore</string>
    <string name="mt_plus25">Increase by 25 mV</string>
    <string name="mt_minus25">Decrease by 25 mV</string>
    <string name="current_speed">Current Speed</string>
    <string name="current_max">Current max:</string>
    <string name="current_min">Current min:</string>
    <string name="governor">Governor</string>
    <string name="io">IO Scheduler</string>
    <string name="sob">Set on boot</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mt_gov_ctrl">Governor Settings</string>
    <string name="prefcat_free_memory">FREE MEMORY</string>
    <string name="prefcat_tweaks">FAST CHARGE</string>
    <string name="prefcat_misc_short">MISC</string>
    <string name="prefcat_read_ahead">SD READ AHEAD</string>
    <string name="prefcat_vm_settings">VM SETTINGS</string>
    <string name="pt_vm">VM Settings</string>
    <string name="dt_free_memory">Minfree Taskkiller</string>
    <string name="dt_read_ahead">SD Read Ahead</string>
    <string name="pt_free_memory">Free memory</string>
    <string name="ps_free_memory">Amount of RAM the minfree taskkiller will keep |
        Current: %s
    </string>
    <string name="ps_free_memory_boot">Apply the amount above at boot</string>
    <string name="pt_read_ahead">SD read ahead</string>
    <string name="ps_read_ahead">Amount to read ahead on SDCard reads in kb |
        Current: %s
    </string>
    <string name="ps_fast_charge_boot">Fast charge</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER EACH REBOOT!\n\nWhile Fast Charge is ON, you can *only* charge your phone!</string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
   <string name="prefcat_oom">MINFREE TASKKILLER</string>
   <string name="title_foreground_app">Foreground Applications</string>
   <string name="title_visible_app">Visible Applications</string>
   <string name="title_secondary_server">Secondary Server</string>
   <string name="title_hidden_app">Hidden Applications</string>
   <string name="title_content_providers">Content Providers</string>
   <string name="title_empty_app">Empty Applications</string>
   <string name="prefcat_oom_predefines">PRESETS</string>
   <string name="pt_oom">Minfree Taskkiller Presets</string>
    <string-array name="oom_values">
        <item>Very Light</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Aggressive</item>
        <item>Very Aggressive</item>
    </string-array>
    <string name="prefcat_user_proc">NOT KILLABLE USER PROCESSES</string>
    <string name="prefcat_sys_proc">NOT KILLABLE SYSTEM PROCESSES</string>
    <string name="pt_user_proc">Enable not killable user processes</string>
    <string name="pt_sys_proc">Enable not killable system processes</string>
    <string name="pt_user_names_proc">User Processes whitelist</string>
    <string name="pt_sys_names_proc">System Processes whitelist</string>
    <string name="ps_restore_boot">Restore above settings at boot</string>
    <string name="ps_user_proc">The list of user process names (comma separated)</string>
    <string name="ps_sys_proc">The list of system process names (comma separated)</string>
    <string name="no_proc">No packages</string>
    <string name="prefcat_bln">BACKLIGHT NOTIFICATION</string>
    <string name="pt_bln">Backlight Notification</string>
   <string name="blx_info">Battery Life eXtender feature\nAuthor Ezekeel</string>
   <string name="prefcat_blx">BATTERY LIFE EXTENDER</string>
   <string name="pt_blx_boot">Set on boot</string>
   <string name="ps_blx_boot">Apply the amount above at boot</string>
   <string name="blx_title">Charge limit:</string>
   <string name="dsync_info">Dynamic FSync feature\nAuthor Paul Reioux (faux123)</string>
   <string name="prefcat_dsync">DYNAMIC FSYNC</string>
   <string name="ps_dsync">Setting will be restored on reboot</string>
   <string name="pt_dsync">Dynamic Fsync</string>
   <string name="prefcat_bltimeout">BACKLIGHT TIMEOUT</string>
   <string name="ps_bltimeout">%s ms</string>
   <string name="bltimeout_title">Backlight timeout (ms)</string>
   <string name="prefcat_bltouch">BACKLIGHT ON TOUCHSCREEN</string>
   <string name="pt_bltouch">Backlight on touchscreen</string>
   <string name="pfk_info">Phantom Key Presses Filter module ver. %s\nAuthor Cristoforo Cataldo (Christopher83)</string>
   <string name="prefcat_pfk">PHANTOM KEY PRESSES FILTER</string>
   <string name="pt_home_enabled">Home key filter</string>
   <string name="ps_home_enabled">Ignored key pressed: %s</string>
   <string name="home_allowed_irq_title">Max allowed interrupts</string>
   <string name="home_report_wait_title">Report wait time (ms)</string>
   <string name="pkf_settings">PKF Settings</string>
   <string name="pt_menuback_enabled">Menu/Back keys filter</string>
   <string name="ps_menuback_enabled">Ignored key pressed: %s</string>
   <string name="menuback_interrupt_checks_title">Interrupts checks</string>
   <string name="menuback_first_err_wait_title">First error wait time (ms)</string>
   <string name="menuback_last_err_wait_title">Last error wait time (ms)</string>
   <string name="ps_pfk_set_on_boot">If enabled will restore all pkf settings on reboot</string>
   <string name="dynamic_writeback_info">Dynamic Dirty Page Writebacks feature\nAuthor Cristoforo Cataldo (Christopher83)</string>
   <string name="dynamic_write_back_title">DYNAMIC DIRTY PAGE WRITEBACKS</string>
   <string name="pt_dynamic_write_back">Dynamic Dirty Writeback</string>
   <string name="dynamic_writeback_active_title">Dirty Writeback Active centisecs</string>
   <string name="dynamic_writeback_suspend_title">Dirty Writeback Suspend centisecs</string>
    <string name="size_25_mb">25mb</string>
    <string name="size_50_mb">50mb</string>
    <string name="size_75_mb">75mb</string>
    <string name="size_80_mb">80mb</string>
    <string name="size_100_mb">100mb</string>
    <string name="size_128_kb">128kb</string>
    <string name="size_256_kb">256kb</string>
    <string name="size_512_kb">512kb</string>
    <string name="size_1024_kb">1024kb</string>
    <string name="size_2048_kb">2048kb</string>
    <string name="size_3072_kb">3072kb</string>
    <string name="size_4096_kb">4096kb</string>
    <string name="volt_info">ATTENTION!\nBefore activating Set on boot, make sure that the values ​​entered do not exceed limits or risk the phone to freeze.</string>
    <string name="ps_volt_mhz_voltage">" Hz"</string>
    <string name="ps_volt_save">"Save"</string>
    <string name="ps_volt_current_voltage">"Current voltage: "</string>
    <string name="ps_volt_setting_to_apply">"Setting to apply: "</string>
    <string name="pt_volt_control">Voltage control</string>
    <string name="ps_volt_control">Set voltages for each frequency</string>
    <string name="apply_values">Apply values</string>
    <string name="freq">Frequency</string>
    <string name="current">mV current</string>
    <string name="saved">mV saved</string>
    <string name="not_supported">Your kernel does not support voltage control</string>
    <string name="ps_vm_set_on_boot">If enabled will restore all vm settings on reboot</string>
    <string name="dirty_ratio_title">Dirty ratio</string>
    <string name="dirty_background_title">Dirty background ratio</string>
    <string name="dirty_expire_title">Dirty expire centisecs</string>
    <string name="dirty_writeback_title">Dirty writeback centisecs</string>
    <string name="min_free_title">Minfree kbytes</string>
    <string name="overcommit_title">Overcommit ratio</string>
    <string name="swappiness_title">Swappiness</string>
    <string name="vfs_title">VFS cache pressure</string>
    <string name="time_in_state">TIME IN STATE</string>
    <string name="unused_cpu_states">UNUSED CPU STATES</string>
    <string name="total_state_time">TOTAL STATE TIME</string>
    <string name="no_states_file_found">No states file found. Are you sure your phone is
        compatible?\n\nIf you are running a custom ROM or kernel, try
        contacting its developer to inform him that the states file is not
        readable.
    </string>
    <string name="deep_sleep">"Deep Sleep"</string>
    <string name="kernel_info">LINUX KERNEL INFORMATION</string>
    <string name="cpu_info">CPU Information</string>
    <string name="prop_name">Name</string>
    <string name="prop_val">Value</string>
    <string name="prop_preset">Presets</string>
    <string name="prefcat_viber">VIBRATION</string>
    <string name="viber_title">Vibration Intensity Control</string>
    <string name="mpdecision">MPDECISION</string>
    <string name="pt_mpdecision">Enable MPDecision</string>
    <string name="intelliplug">INTELLIPLUG</string>
    <string name="pt_intelliplug">Enable Intelliplug</string>
    <string name="ecomode">ECOMODE</string>
    <string name="pt_ecomode">Enable EcoMode</string>
    <string name="so_min_max">SCREEN OFF FREQUENCIES</string>
    <string name="pt_so_max">Screen off maximum frequency</string>
    <string name="pt_so_min">Screen off minimum frequency</string>
    <string name="prefcat_touchscr">TOUCHSCREEN</string>
    <string name="ps_touchscr">TouchScreen Control</string>
    <string name="toucht1">Slide to Wake</string>
    <string name="toucht2">Sweep to Wake</string>
    <string name="toucht21">Sweep to Sleep</string>
    <string name="toucht3">Home to Wake</string>
    <string name="toucht4">Logo to Wake</string>
    <string name="toucht5">Logo to Menu</string>
    <string name="toucht6">Double Tap to Wake</string>
    <string name="toucht7">Pocket Detect</string>
    <string name="toucht8">Pick to Wake</string>
    <string name="toucht9">Flick to Sleep</string>
    <string name="toucht9s">Sensitivity</string>
    <string name="toucht10">Touch to Wake</string>
    <string name="prefcat_mc_ps">MULTICORE POWER SAVING</string>
    <string name="pt_mc_ps">Multicore Power Saving</string>
    <string name="pt_hp">Generic Hotplug</string>
    <string name="ps_hp">Disable one core when screen is off</string>
    <string name="pt_cpuquiet">CPUQuiet Governor</string>
    <string name="ps_cpuquiet">Controls which CPU cores are available and when | Current: %s</string>
    <string name="pt_hotplug">Hotplug Control</string>
    <string name="ps_mc_ps">Try to group tasks into the least cores possible | Current: %s</string>
    <string name="pt_gpu_fmax">GPU maxim frequency</string>
    <string name="ps_gpu_fmax">Current: %s</string>
    <string name="devs">Developer(s)</string>
    <string name="about_ioap">About IOAP</string>
    <string name="facebook_ioap">http://www.facebook.com/Infamous</string>
    <string name="gplus_ioap">https://plus.google.com/+Infamous</string>
    <string name="name_ioap">IOAP</string>
    <string name="github_ioap">https://github.com/IOAP</string>
    <string name="email_ioap">infamous@gmail.com</string>
    <string name="twitter_ioap">IOKP</string>
    <string name="ioap_site_title">IOAP Website</string>
    <string name="ioap_site_summary">Visit the IOAP website for latest news.</string>
    <string name="google_ioap">https://plus.google.com/+Infamous/about</string>
</resources>