<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

    <PreferenceCategory
            android:key="category_read_ahead"
            android:title="@string/prefcat_read_ahead">

        <ListPreference
                android:dialogTitle="@string/dt_read_ahead"
                android:entries="@array/read_ahead"
                android:entryValues="@array/read_ahead_values"
                android:key="pref_read_ahead"
                android:persistent="true"
                android:title="@string/pt_read_ahead"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_read_ahead_boot"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>

<!-- Dynamic Fsync -->
    <PreferenceCategory
            android:key="dsync"
            android:title="@string/prefcat_dsync">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dsync"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_dsync"/>
    </PreferenceCategory>
<!-- BL timeout -->
    <PreferenceCategory
            android:key="bltimeout"
            android:title="@string/prefcat_bltimeout">
        <Preference
                android:key="pref_bltimeout"
                android:title="@string/bltimeout_title"/>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="bltimeout_sob"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>
<!-- BL touch -->
    <PreferenceCategory
            android:key="bltouch"
            android:title="@string/prefcat_bltouch">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_bltouch"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_bltouch"/>
  </PreferenceCategory>
    <!-- BLN -->
    <PreferenceCategory
            android:key="bln"
            android:title="@string/prefcat_bln">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_bln"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_bln"/>
    </PreferenceCategory>
    <!-- TouchScreen Settings -->
    <PreferenceCategory
        android:key="touch_scr"
        android:title="@string/prefcat_touchscr">
        <Preference
            android:key="touchscr_settings"
            android:title="@string/ps_touchscr"/>
    </PreferenceCategory>
    <!-- Vibration Intensity -->
    <PreferenceCategory
        android:key="viber"
        android:title="@string/prefcat_viber">
        <Preference
            android:key="pref_viber"
            android:title="@string/viber_title"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="viber_sob"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>
    <!-- PFK -->
    <PreferenceCategory
            android:key="pfk"
            android:title="@string/prefcat_pfk">
        <Preference
            android:key="pfk_settings"
            android:title="@string/pkf_settings"/>
	 <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_sob"
                android:summary="@string/ps_pfk_set_on_boot"
                android:title="@string/sob"/>	
    </PreferenceCategory>
<!-- Dynamic write back-->
    <PreferenceCategory
            android:key="cat_dynamic_write_back"
            android:title="@string/dynamic_write_back_title">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dynamic_dirty_writeback"
                android:title="@string/pt_dynamic_write_back"/>
        <Preference
                android:key="pref_dynamic_writeback_active"
                android:title="@string/dynamic_writeback_active_title"/>
        <Preference
                android:key="pref_dynamic_writeback_suspend"
                android:title="@string/dynamic_writeback_suspend_title"/>    
	 <CheckBoxPreference
                android:defaultValue="false"
                android:key="dynamic_write_back_sob"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>	
    </PreferenceCategory>
    <!-- VM Settings -->
    <PreferenceCategory
        android:key="cat_vm"
        android:title="@string/prefcat_vm_settings">
        <Preference
            android:key="vm_settings"
            android:title="@string/pt_vm"/>
    </PreferenceCategory>

</PreferenceScreen>

