<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="About Infamous"
xmlns:rb="http://schemas.android.com/apk/res/com.android.settings">

<PreferenceScreen android:key="ioap_logo"
                 android:layout="@layout/logo" />

	<PreferenceCategory
	android:key="links"
	android:title="@string/about_ioap">

	<Preference
	    android:key="ioap_site"
	    android:title="@string/ioap_site_title"
	    android:summary="@string/ioap_site_summary" />

	<com.android.settings.widgets.DeveloperPreference
                        android:title="IOAP"
                        rb:nameDev="IOAP"
                        rb:facebookLink="@string/facebook_ioap"
                        rb:githubLink="@string/github_ioap"
            		    rb:twitterHandle="IOKP"
			            rb:googleLink="@string/google_ioap"
                        rb:emailDev="infamous@gmail.com"/>

</PreferenceCategory>

	<PreferenceCategory
	    android:key="devs"
            android:title="@string/devs">

        <com.android.settings.widgets.DeveloperPreference
            android:title="IOAP"
            rb:nameDev="@string/name_ioap"
            rb:twitterHandle="@string/twitter_ioap"
            rb:githubLink="@string/github_ioap"
            rb:googleLink="@string/gplus_ioap"
            rb:emailDev="@string/email_ioap"/>

</PreferenceCategory>

</PreferenceScreen>
