<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/sob">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dip">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht1"
            android:id="@+id/switch1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht2"
            android:id="@+id/switch2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht21"
            android:id="@+id/switch21" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht3"
            android:id="@+id/switch3" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht4"
            android:id="@+id/switch4" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht5"
            android:id="@+id/switch5" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht6"
            android:id="@+id/switch6" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht10"
            android:id="@+id/switch10" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht7"
            android:id="@+id/switch7" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht8"
            android:id="@+id/switch8" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht9"
            android:id="@+id/switch9" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/f2s"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toucht9s"
            android:textSize="16sp"
            android:id="@+id/f2stxt"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@+id/spinsens"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:id="@+id/spinsens"
            android:layout_gravity="center_vertical|right"
            android:entries="@array/asens"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/pc_light_gray"/>
</LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:id="@+id/sob"
        android:padding="20dip"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sob"
            android:textSize="14sp"
            android:paddingBottom="4dip"
            android:paddingLeft="4dip"
            android:layout_marginRight="10dip" />

        <Switch
            android:id="@+id/swboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>